--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ aside .avatar {
 
 aside .avatar img {
     width: 160px;
-    height: 160px;
+    height: 180px;
     border-radius: 50%;
     border: 1px solid #ccc;
     background: #ccc;
@@ -170,12 +170,13 @@ section.list .item .title {
 }
 
 .contact svg {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .contact .item span {
     margin-left: 10px;
+    font-size: 13px;
 }
 
 main {
@@ -236,7 +237,12 @@ section.blog .item{
 main section{
     margin: 15px 20px 0;
 }
-
+.about{
+    margin-bottom: 50px;
+}
+.about li{
+    line-height: 1.5;
+}
 @media (max-width: 768px) {
     header {
         padding-top: 20px;
@@ -261,7 +267,6 @@ main section{
     aside .avatar {
         top:-50px;
     }
-
     aside {
         width: 240px;
         border-right: 1px solid #ccc;
